--- a/index.html
+++ b/index.html
@@ -1053,7 +1053,7 @@
                     <p>Hiring remote developers ensures continuous development, scalability, and quick ramping of teams.</p>
                     <p class="small mr-2">Learn More <i class="fas fa-arrow-right ml-1"></i></p>
                 </div>
-                <div class="col">
+                <div class="col col-img">
                     <img src="./images/group-people.png" class="big-img" alt="">
                 </div>
             </div>
