--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <ul>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Services</a>
-                            <div class="dd-items" id="dropit" data-aos="fade-right">
+                            <div class="dd-items" id="dropit" data-aos="fade" data-aos-delay="100">
                                 <div class="container-fluid">
                                     <div class="row">
                                         <button class="btn times" id="close-btn" onclick="closeIt()">
@@ -958,40 +958,40 @@
         </div>
         <div class="news-cards">
             <div class="row">
-                <div class="col news1 green p-2" data-aos="fade-up">
+                <div class="col-md-4 news1 green p-2" data-aos="fade-up">
                     <img src="./images/news-icon-1.svg" class="small-img" alt="">
                     <h6>BLOG</h6>
                     <h2>Hire Remote Developers</h2>
                     <p>Hiring remote developers ensures continuous development, scalability, and quick ramping of teams.</p>
                     <p class="small mr-2">Learn More <i class="fas fa-arrow-right ml-1"></i></p>
                 </div>
-                <div class="col news1 p-2" data-aos="fade-up">
+                <div class="col-md-4 news1 p-2" data-aos="fade-up">
                     <img src="./images/news-icon-1.svg" class="small-img" alt="">
                     <h6>BLOG</h6>
                     <h2>Hire Remote Developers</h2>
                     <p>Hiring remote developers ensures continuous development, scalability, and quick ramping of teams.</p>
                     <p class="small mr-2">Learn More <i class="fas fa-arrow-right ml-1"></i></p>
                 </div>
-                <div class="col col-img" data-aos="fade-up">
+                <div class="col-md-4 col-img" data-aos="fade-up">
                     <img src="./images/group-people.png" class="big-img" alt="">
                 </div>
             </div>
             <div class="row">
-                <div class="col news1  p-2" data-aos="fade-up">
+                <div class="col-md-4 news1 p-2" data-aos="fade-up">
                     <img src="./images/news-icon-1.svg" class="small-img" alt="">
                     <h6>BLOG</h6>
                     <h2>Hire Remote Developers</h2>
                     <p>Hiring remote developers ensures continuous development, scalability, and quick ramping of teams.</p>
                     <p class="small mr-2">Learn More <i class="fas fa-arrow-right ml-1"></i></p>
                 </div>
-                <div class="col news1 darkgreen  p-2" data-aos="fade-up">
+                <div class="col-md-4 news1 darkgreen p-2" data-aos="fade-up">
                     <img src="./images/news-icon-1.svg" class="small-img" alt="">
                     <h6>BLOG</h6>
                     <h2>Hire Remote Developers</h2>
                     <p>Hiring remote developers ensures continuous development, scalability, and quick ramping of teams.</p>
                     <p class="small mr-2">Learn More <i class="fas fa-arrow-right ml-1"></i></p>
                 </div>
-                <div class="col news1 big-card  p-2" data-aos="fade-up">
+                <div class="col-md-4 news1 big-card p-2" data-aos="fade-up">
                     <img src="./images/news-icon-1.svg" class="small-img" alt="">
                     <h6>BLOG</h6>
                     <h2>Hire Remote Developers</h2>
@@ -1155,7 +1155,7 @@
                         </select>
                     </div>
                     <div class="form-group row">
-                        <div class="col" data-aos="fade-up">
+                        <div class="col">
                             <label for="exampleFormControlSelect1">Select a service</label>
                             <select class="form-control" id="exampleFormControlSelect1">
                               <option>1</option>
@@ -1165,7 +1165,7 @@
                               <option>5</option>
                         </select>
                         </div>
-                        <div class="col" data-aos="fade-up">
+                        <div class="col">
                             <label for="exampleFormControlSelect1">Select a service</label>
                             <select class="form-control" id="exampleFormControlSelect1">
                               <option>1</option>
@@ -1196,7 +1196,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <input type="submit" class="form-control">
+                        <input type="submit" class="form-control btn">
                     </div>
                 </form>
             </div>
@@ -1357,11 +1357,21 @@
                 <img class="logo" src="./images/final_logo.png" alt="">
                 <p>© 2021 businesslabs. All rights reserved</p>
                 <div class="media">
-                    <img src="./images/facebook.svg" alt="">
-                    <img src="./images/twitter.svg" alt="">
-                    <img src="./images/youtube.svg" alt="">
-                    <img src="./images/instagram.svg" alt="">
-                    <img src="./images/telegram.svg" alt="">
+                    <div class="media-1 facebook">
+                        <i class="fab fa-facebook-f"></i>
+                    </div>
+                    <div class="media-1 twitter">
+                        <i class="fab fa-twitter" aria-hidden="true"></i>
+                    </div>
+                    <div class="media-1 youtube">
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                    <div class="media-1 instagram">
+                        <i class="fab fa-instagram" aria-hidden="true"></i>
+                    </div>
+                    <div class="media-1 telegram">
+                        <i class="fab fa-telegram-plane" aria-hidden="true"></i>
+                    </div>
                 </div>
             </div>
         </div>
